Fix year column whitespace wrap

--- a/frontend/src/components/ChildDataTable/css/index.scss
+++ b/frontend/src/components/ChildDataTable/css/index.scss
@@ -25,5 +25,5 @@ th, tr {
   color: black;
   background: $main-theme !important;
   border: none;
-  min-width: 10%;
+  white-space: nowrap;
 }
